--- a/README.adoc
+++ b/README.adoc
@@ -55,31 +55,53 @@ Next, switch to the directory into which you cloned the repository:
 
  $ cd mulesoft-docs
 
-Finally, use the `gradlew` command to launch Gradle to execute the site builder:
+Finally, use the `gradlew` command to launch Gradle and execute the site builder:
+
+ $ ./gradlew
+
+Running `gradlew` with no arguments executes the default task, which is named build.
+It's equivalent to the following:
 
  $ ./gradlew build
 
-The build task may take several minutes to complete.
+(The build task may take several minutes to complete).
 
-Once you have built the site, you can once again use Gradle to serve it through a local, in-memory web server:
+Once you've built the site, you can once again use Gradle to serve the site using a local, in-memory web server:
 
  $ ./gradlew serve
 
 You can now access the site from your browser at the location \http://localhost:8000.
 
+CAUTION: Currently, not all links work in the local preview since the preview server doesn't implement the rewrite rules used in production.
+If you encounter a 404 when clicking on a link in the site navigation, try adding ".html" to the URL in the location bar.
+
 When you want to stop the preview server, simply press kbd:[Ctrl+c].
 
-CAUTION: At the moment, not all links will work in the site since the preview server doesn't implement any of the rewrite rules that are used by the production site.
+To run a full build and launch the preview server in one shot, combine the `build` and `serve` tasks:
+
+ $ ./gradlew build serve
+
+=== Building the Site for Stating
+
+The Gradle build script is also capable of building the site for stating and syncing the output to the staging server.
+The extra tasks and configuration needed for these operations are added when the `profile` property has the value `stating`.
+You can set this property by passing the flag `-Pprofile=stating` to the `gradlew` launch command.
+
+To instruct Gradle to clean, build, and publish the stating site, execute the following command:
+
+ $ ./gradlew clean publish -Pprofile=staging
+
+NOTE: The staging site combines the assets from the staging branch of mule-docs-site-assets with the content from the master branch of mule-docs.
 
 === Building the Site for Production
 
 The Gradle build script is also capable of building the site for production and publishing it to git.
-The extra tasks and configuration needed for these operations are added when the `profile` property has the value `ci`.
-You can set this property by passing the flag `-Pprofile=ci` to the `gradlew` launch command.
+The extra tasks and configuration needed for these operations are added when the `profile` property has the value `prod`.
+You can set this property by passing the flag `-Pprofile=prod` to the `gradlew` launch command.
 
 To instruct Gradle to clean, build, and publish the production site, execute the following command:
 
- $ ./gradlew clean publish -Pprofile=ci
+ $ ./gradlew clean publish -Pprofile=prod
 
 CAUTION: The first time you execute this command, it will run for a very long time (depending on connection speed) since it must clone the publish (aka build output) repository anew.
 
