experimental nav - more descriptive

--- a/mule-user-guide/v/3.8/_toc.adoc
+++ b/mule-user-guide/v/3.8/_toc.adoc
@@ -1,12 +1,12 @@
 // Mule User Guide 3.8 TOC
 
 * link:/mule-user-guide/v/3.8/index[Mule User Guide]
-** link:/mule-user-guide/v/3.8/installing[Installing]
+** link:/mule-user-guide/v/3.8/installing[Installing Mule Runtime]
 *** link:/mule-user-guide/v/3.8/hardware-and-software-requirements[Hardware and Software Requirements]
 *** link:/mule-user-guide/v/3.8/downloading-and-starting-mule-esb[Downloading and Starting Mule Runtime]
 *** link:/mule-user-guide/v/3.8/installing-an-enterprise-license[Installing an Enterprise License]
 *** link:/mule-user-guide/v/3.8/third-party-software-in-mule[Third Party Software in Mule]
-** link:/mule-user-guide/v/3.8/developing[Developing]
+** link:/mule-user-guide/v/3.8/developing[Developing with Mule]
 *** link:/mule-user-guide/v/3.8/anypoint-connectors[Anypoint Connectors]
 **** link:/mule-user-guide/v/3.8/connectors-user-guide[Connector User Guide]
 ***** link:/mule-user-guide/v/3.8/installing-connectors[Installing Connectors]
@@ -267,7 +267,7 @@
 ***** link:/mule-user-guide/v/3.8/proxying-web-services[Proxying Web Services]
 ***** link:/mule-user-guide/v/3.8/using-.net-web-services-with-mule[Using .NET Web Services with Mule]
 **** link:/mule-user-guide/v/3.8/passing-additional-arguments-to-the-jvm-to-control-mule[Passing Additional Arguments to the JVM to Control Mule]
-** link:/mule-user-guide/v/3.8/securing[Securing]
+** link:/mule-user-guide/v/3.8/securing[Securing Mule Applications]
 *** link:/mule-user-guide/v/3.8/anypoint-enterprise-security[Anypoint Enterprise Security]
 **** link:/mule-user-guide/v/3.8/installing-anypoint-enterprise-security[Installing Anypoint Enterprise Security]
 **** link:/mule-user-guide/v/3.8/mule-secure-token-service[Mule Secure Token Service]
@@ -300,7 +300,7 @@
 *** link:/mule-user-guide/v/3.8/unit-testing[Unit Testing]
 *** link:/mule-user-guide/v/3.8/functional-testing[Functional Testing]
 *** link:/mule-user-guide/v/3.8/testing-strategies[Testing Strategies]
-** link:/mule-user-guide/v/3.8/deploying[Deploying]
+** link:/mule-user-guide/v/3.8/deploying[Deploying Mule Applications]
 *** link:/mule-user-guide/v/3.8/starting-and-stopping-mule-esb[Starting and Stopping Mule]
 *** link:/mule-user-guide/v/3.8/deployment-scenarios[Deployment Scenarios]
 **** link:/mule-user-guide/v/3.8/choosing-the-right-clustering-topology[Choosing the Right Clustering Topology]
@@ -337,7 +337,7 @@
 **** link:/mule-user-guide/v/3.8/configuring-mule-as-a-windows-service[Configuring Mule as a Windows Service]
 **** link:/mule-user-guide/v/3.8/configuring-mule-to-run-from-a-script[Configuring Mule to Run From a Script]
 *** link:/mule-user-guide/v/3.8/preparing-a-gitignore-file[Preparing a gitignore File]
-** link:/mule-user-guide/v/3.8/extending[Extending]
+** link:/mule-user-guide/v/3.8/extending[Extending Mule]
 *** link:/mule-user-guide/v/3.8/extending-components[Extending Components]
 *** link:/mule-user-guide/v/3.8/custom-message-processors[Custom Message Processors]
 *** link:/mule-user-guide/v/3.8/creating-example-archetypes[Creating Example Archetypes]
